See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

11.06.29 BJH  Release 10.55.00

              Add pamtosrf, srftopam.  Thanks Mike Frysinger
              (vapier@gentoo.org).

              pamrubber: fix crash.  Introduced in 10.54.

              libnetpbm: pm_system(): fix bug - program always takes
              Standard Input from invoker's Standard Input when you don't
              supply a Standard Output accepter.  Introduced in 10.40.

              ppmtobmp: fix bug: crash ("internal error") or bogus failure or
              incorrect output on image without palette (e.g. black and
              white).  Introduced in 10.54.

              pnmtops: fix floating point exception or bogus width/height
              too large error.  Introduced in 10.53.

              pnmcat: Fix garbage output when multiple input image are from
              Standard Input (now it just fails gracefully).

              Build: Use 'pkg-config' to find X libraries if possible (This
              works with modern Xorg installations).

              Build: pnmtopng, pamrgbatopng compile with newer libpng,
              as they no longer refer to private members of the pnginfo
              structure.

              Build: fix undefined "strsol" and "vsnprintfN" failure on
              systems without vasprintf().  Introduced in 10.53.

              Build: fix compiler warning in pbmtocmuwm.

              configure: fix selection of mingw compiler.  Introduced in
              10.48.

11.03.30 BJH  Release 10.54.00

              Add pamrubber.  Thanks Willem van Schaik <willem@schaik.com>.

              Add ppmtoapplevol.  Thanks Matthew Garrett
              <mjg59@srcf.ucam.org>.

              Add pamwipeout.  Thanks Willem van Schaik <willem@schaik.com>.

              pngtopam: add -byrow.

              pnmtopclxl: add -embedded.
